--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Build-Depends: android-headers,
                debhelper (>= 11),
                dh-exec,
                intltool,
+               pulseaudio-pulsecore-dev,
                libdbus-1-dev,
                libhardware-dev,
                libhybris-common-dev,
