--- a/debian/control
+++ b/debian/control
@@ -28,5 +28,6 @@ Description: PulseAudio Droid HAL module.
 
 Package: pulseaudio-modules-droid-dev
 Architecture: any
-Depends: pulseaudio-module-droid, ${misc:Depends}
+Depends: pulseaudio-modules-droid (= ${binary:Version}),
+         ${misc:Depends},
 Description: PulseAudio Droid HAL module development headers.
