--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: pulseaudio-modules-droid
+Source: pulseaudio-modules-droid-modern
 Section: sound
 Priority: optional
 Build-Depends: android-headers,
@@ -15,19 +15,27 @@ Build-Depends: android-headers,
                libexpat1-dev,
                libevdev-dev,
                libudev-dev
-Maintainer: Marius Gripsgard <marius@ubports.com>
+Maintainer: Eugenio Paolantonio (g7) <me@medesimo.eu>
 Standards-Version: 4.3.0
 Homepage: https://github.com/mer-hybris/pulseaudio-modules-droid
-Vcs-Git: https://gitlab.com/debian-pm/halium/pulseaudio-modules-droid.git
-Vcs-Browser: https://gitlab.com/debian-pm/halium/pulseaudio-modules-droid
+Vcs-Git: https://github.com/droidian/pulseaudio-modules-droid-modern.git
+Vcs-Browser: https://github.com/droidian/pulseaudio-modules-droid-modern
 
-Package: pulseaudio-modules-droid
+Package: pulseaudio-modules-droid-modern
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Description: PulseAudio Droid HAL module.
+Conflicts: pulseaudio-modules-droid-jb2q
+Description: PulseAudio Droid HAL module
+ Pulseaudio modules to interact with the Android HAL.
+ .
+ This package contains the actual modules, for Android 11+.
 
-Package: pulseaudio-modules-droid-dev
+Package: pulseaudio-modules-droid-modern-dev
 Architecture: any
-Depends: pulseaudio-modules-droid (= ${binary:Version}),
+Depends: pulseaudio-modules-droid-modern (= ${binary:Version}),
          ${misc:Depends},
-Description: PulseAudio Droid HAL module development headers.
+Conflicts: pulseaudio-modules-droid-jb2q-dev
+Description: PulseAudio Droid HAL module - development headers
+ Pulseaudio modules to interact with the Android HAL.
+ .
+ This package contains the development headers.
