[meson] Compile droid-card with extevdev
Signed-off-by: Eugenio Paolantonio (g7) <me@medesimo.eu>

--- a/meson.build
+++ b/meson.build
@@ -23,6 +23,10 @@ hybris_common_dep = cc.find_library('hybris-common', required : true)
 ltdl_dep = cc.find_library('ltdl', required : true)
 pulsecore_dep = dependency('pulsecore', version : '>= 14.2', required : true)
 
+# ubports/droidian changes
+libudev_dep = dependency('libudev', version : '>= 183', required : true)
+libevdev_dep = dependency('libevdev', version : '>= 1.0', required : true)
+
 pa_version_str = meson.project_version()
 # For tarballs, the first split will do nothing, but for builds in git, we
 # split out suffixes when there are commits since the last tag
