[packaging] Switch to meson
Signed-off-by: Eugenio Paolantonio (g7) <me@medesimo.eu>

--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Build-Depends: android-headers,
                debhelper (>= 11),
                dh-exec,
                intltool,
+               meson,
                pulseaudio-pulsecore-dev,
                libdbus-1-dev,
                libhardware-dev,
