--- a/debian/rules
+++ b/debian/rules
@@ -6,14 +6,11 @@ include /usr/share/dpkg/default.mk
 PA_MODULE_DIR := $$(readlink -f /usr/lib/pulse-*/modules)
 
 %:
-	dh $@ --with=autoreconf
+	dh $@
 
 override_dh_auto_configure:
-	dh_auto_configure -- --disable-static --with-module-dir=${PA_MODULE_DIR}
-
-override_dh_autoreconf:
 	echo ${DEB_VERSION_UPSTREAM} > .tarball-version
-	dh_autoreconf
+	dh_auto_configure -- -Dmodlibexecdir=${PA_MODULE_DIR}
 
 override_dh_auto_clean:
 	if [ -f .tarball-version ]; then rm .tarball-version; fi
@@ -24,8 +21,6 @@ override_dh_shlibdeps:
 
 override_dh_auto_install:
 	dh_auto_install
-
-	rm debian/tmp/usr/lib/pulse-*/modules/*.la
 
 	install -d debian/tmp/usr/include/pulsecore/modules/droid
 	install -m 644 src/common/*.h debian/tmp/usr/include/pulsecore/modules/droid
